<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">田博士</string>
    <string name="action_settings">Settings</string>
    <string name="app_show_name">田博士</string>
    
    <string name="hint_input_phone">输入手机号码</string>
    <string name="hint_input_psd">输入密码</string>
    <string name="hint_input_again">再次输入密码</string>
    <string name="hint_input_auto">自动获取验证码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forget_psd">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="agreement">当点击注册，表示你同意《田博士使用许可协议》</string>
    <string name="next">下一步</string>
    
    <string name="my_course">我的课程</string>
    <string name="course_res">课程库</string>
    <string name="chat">客户服务</string>
    <string name="my">我</string>
    
    <string name="has_start">已开始</string>
    <string name="will_start">即将开始</string>
    
    <string name="find">查找</string>
    <string name="commit">提交</string>
    
    <string name="my_info">我的资料</string>
    <string name="my_down">我的下载</string>
    <string name="rec">向好友推荐</string>
    <string name="edit_psd">修改密码</string>
    <string name="help">帮助中心</string>
    <string name="about">关于我们</string>
    <string name="upgrade_rec">升级为推广人</string>
    <string name="logout">退出登录</string>
    
    <string name="course_detail">课程详情</string>
    <string name="course_table">课程表</string>
    <string name="course_exp">经验谈</string>
    <string name="course_discus">讨论区</string>
    
    <string name="talk_discuss">讨论</string>
    <string name="talk_letter">私信</string>
    <string name="talk_customer">我的客户</string>
    <string name="reply">回复</string>
    <string name="reply_hint">请输入回复内容</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <string name="comment_hint">发表评论</string>
    <string name="comment_send">发送</string>
    <string name="add_friend">添加好友</string>
    
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">已发送</string>
    <string name="refresh">最新评论</string>
    

</resources>