<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/title_bar_bg"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical" >

        <RadioButton
            android:id="@+id/radio_mycourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/my_course"
            android:textColor="@color/font_selector"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/course_res"
            android:textColor="@color/font_selector"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/chat"
            android:textColor="@color/font_selector"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/my"
            android:textColor="@color/font_selector"
            android:textSize="18dp" />
    </RadioGroup>

</LinearLayout>