<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="50dp"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/info_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="4月8号测试经验谈"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="2015-04-07 16:46:24"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="农大粮王大赛"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@color/lightgreen" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/img"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="lixin"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/product"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="化肥种子"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_attention"
                        android:layout_width="50dp"
                        android:layout_height="22dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/transparent" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:background="@color/yellow"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_discus" />
                
                <Button android:id="@+id/btn_refresh"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/refresh"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <ListView
                    android:id="@+id/talk_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000"
                    android:listSelector="#00000000" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_input"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/title_bar_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ed_info"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="5"
                android:background="@drawable/input_bottom_bg"
                android:gravity="center_vertical"
                android:hint="@string/comment_hint" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/comment_send"
                android:textColor="@color/login_txt"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- 添加分割线 -->

        <ImageView
            style="@style/divide"
            android:layout_above="@id/bottom_input" />
    </RelativeLayout>

</LinearLayout>